# pyspark-hand-on

./: .gitignore  README.md  pyproject.toml
src/config/: env_vars.md
src/section_2/: setup_spark.py  setup_spark.sh
src/section_5/: workshop_5.ipynb
src/section_6/: workshop_6.ipynb
src/section_7/: workshop_7 _10.ipynb  workshop_7 _11.ipynb  workshop_7 _2.ipynb  workshop_7 _3_columns.ipynb  workshop_7 _4_select.ipynb  workshop_7 _5_.ipynb  workshop_7 _6.ipynb  workshop_7 _7.ipynb  workshop_7 _8.ipynb  workshop_7 _9.ipynb  workshop_7_1.ipynb  workshop_7_10-aws.py  workshop_7_10-azure.py  workshop_7_10-gcp.py
src/section_8/: workshop_8 _1.ipynb  workshop_8 _2.ipynb  workshop_8 _3.ipynb  workshop_8 _4.ipynb  workshop_8 _5.ipynb  workshop_8 _6.ipynb
src/section_9/: workshop_9_1.ipynb  workshop_9_2.ipynb  workshop_9_3.ipynb  workshop_9_4.ipynb  workshop_9_5.ipynb  workshop_9_6.ipynb
src/utils/: utils.py
