[project]
name = "pyspark-hand-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ensurepath>=0.2.6",
    "findspark>=2.0.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pipx>=1.7.1",
    "pyarrow>=22.0.0",
    "pyspark<4.0.0",
]
